--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Metro range slider",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/eslint src/**/*.js src/**/*.jsx",
+    "start": "webpack-dev-server",
+    "build": "webpack"
   },
   "keywords": [
     "react",
