--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-range-slider",
-  "version": "2.0.0",
+  "name": "react-metro-range-slider",
+  "version": "0.0.1",
   "description": "Metro range slider",
   "main": "index.js",
   "scripts": {
