fixed npm ignore issue

--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "react-metro-range-slider",
   "version": "0.1.3",
   "description": "Metro range slider",
-  "main": "lib/index.js",
+  "main": "lib/ReactRangeSlider.js",
   "scripts": {
-    "clean": "del lib",
+    "clean": "rm -rf lib",
     "test": "node_modules/.bin/eslint src/**/*.js src/**/*.jsx",
     "start": "webpack-dev-server",
     "build:lib": "babel ./src --stage 0 -d ./lib",
     "build:less": "lessc ./src/components/ReactRangeSlider/style.less ./lib/index.css",
-    "build": "webpack && npm run build:lib && npm run build:less",
+    "build": "webpack",
     "postpublish": "git push origin master --follow-tags",
     "minor": "npm version minor && npm publish && npm run clean",
     "major": "npm version major && npm publish && npm run clean",
