cleaned up project

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "clean": "rm -rf lib",
     "test": "node_modules/.bin/eslint src/**/*.js src/**/*.jsx",
     "start": "webpack-dev-server",
-    "build:lib": "babel ./src --stage 0 -d ./lib",
-    "build:less": "lessc ./src/components/ReactRangeSlider/style.less ./lib/index.css",
-    "build": "webpack",
+    "build:lib": "babel ./src --stage 2 -d ./lib",
+    "build:less": "lessc ./src/styles/style.less ./lib/index.css",
+    "build": "npm run build:lib && npm run build:less",
     "postpublish": "git push origin master --follow-tags",
     "minor": "npm version minor && npm publish && npm run clean",
     "major": "npm version major && npm publish && npm run clean",
