--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "description": "Metro range slider",
   "main": "lib/index.js",
   "scripts": {
-    "clean": "rm -rf lib",
     "test": "node_modules/.bin/eslint src/**/*.js src/**/*.jsx",
     "start": "webpack-dev-server",
     "build:lib": "babel ./src --stage 2 -d ./lib",
     "build:less": "lessc ./src/styles/style.less ./lib/index.css",
     "build": "npm run build:lib && npm run build:less",
     "postpublish": "git push origin master --follow-tags",
-    "minor": "npm version minor && npm publish && npm run clean",
-    "major": "npm version major && npm publish && npm run clean",
-    "patch": "npm version patch && npm publish && npm run clean"
+    "minor": "npm version minor && npm publish",
+    "major": "npm version major && npm publish",
+    "patch": "npm version patch && npm publish"
   },
   "files": [
     "lib"
