--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "test": "node_modules/.bin/eslint src/**/*.js src/**/*.jsx",
     "start": "webpack-dev-server",
+    "clean": "rm ./lib/App.js",
     "build:lib": "babel ./src --stage 2 -d ./lib",
     "build:less": "lessc ./src/styles/style.less ./lib/index.css",
     "build": "npm run build:lib && npm run build:less",
     "postpublish": "git push origin master --follow-tags",
-    "minor": "npm version minor && npm publish",
-    "major": "npm version major && npm publish",
-    "patch": "npm version patch && npm publish"
+    "minor": "npm version minor && npm publish && npm run clean",
+    "major": "npm version major && npm publish && npm run clean",
+    "patch": "npm version patch && npm publish && npm run clean"
   },
   "files": [
     "lib"
@@ -42,8 +43,11 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "extract-text-webpack-plugin": "^3.0.2",
+    "html-webpack-plugin": "^2.30.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0"
   }
