--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,15 @@
 {
   "extends": "airbnb",
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true,
+      "modules": true,
+      "experimentalObjectRestSpread": true
+    }
+  },
   "rules": {
     "no-console": [
       "error",
